--- a/templates/home.html
+++ b/templates/home.html
@@ -17,7 +17,7 @@
         <h2>Bienvenido al Algoritmo del Punto Medio</h2>
     </div>
     <div id="form-container" class="form-container" style="display: none;">
-        <h1>Algoritmo del Punto Medio para Círculos</h1>
+        <h1>Algoritmo del Punto Medio para Elipses</h1>
         <h3>Equipo: Genios Unidos</h3>
         <div class="flex-container">
             <div class="flex-item form-section">
@@ -33,9 +33,13 @@
                         </div>
                     </div>
                     <div class="form-row">
-                        <div id="form-group-r" class="form-group">
-                            <label for="r">Radio:</label>
-                            <input type="number" id="r" name="r" required>
+                        <div id="form-group-rx" class="form-group">
+                            <label for="rx">Radio X (Rx):</label>
+                            <input type="number" id="rx" name="rx" required>
+                        </div>
+                        <div id="form-group-ry" class="form-group">
+                            <label for="ry">Radio Y (Ry):</label>
+                            <input type="number" id="ry" name="ry" required>
                         </div>
                     </div>
                     <button id="form-submit-btn" class="form-submit-btn" type="submit">Calcular</button>
@@ -71,8 +75,8 @@
         </div>
         <div class="flex-container-table">
             <div class="flex-item table-section">
-                <h2>Octante 1</h2>
-                <table id="tabla-octante-1">
+                <h2>Región 1</h2>
+                <table id="tabla-region-1">
                     <thead>
                         <tr>
                             <th>N</th>
@@ -86,90 +90,14 @@
                 </table>
             </div>
             <div class="flex-item table-section">
-                <h2>Octante 2</h2>
-                <table id="tabla-octante-2">
+                <h2>Región 2</h2>
+                <table id="tabla-region-2">
                     <thead>
                         <tr>
-                            <th>Y</th>
-                            <th>X</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                    </tbody>
-                </table>
-            </div>
-            <div class="flex-item table-section">
-                <h2>Octante 3</h2>
-                <table id="tabla-octante-3">
-                    <thead>
-                        <tr>
-                            <th>X</th>
-                            <th>-Y</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                    </tbody>
-                </table>
-            </div>
-            <div class="flex-item table-section">
-                <h2>Octante 4</h2>
-                <table id="tabla-octante-4">
-                    <thead>
-                        <tr>
-                            <th>-Y</th>
-                            <th>X</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                    </tbody>
-                </table>
-            </div>
-            <div class="flex-item table-section">
-                <h2>Octante 5</h2>
-                <table id="tabla-octante-5">
-                    <thead>
-                        <tr>
-                            <th>-Y</th>
-                            <th>-X</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                    </tbody>
-                </table>
-            </div>
-            <div class="flex-item table-section">
-                <h2>Octante 6</h2>
-                <table id="tabla-octante-6">
-                    <thead>
-                        <tr>
-                            <th>-X</th>
-                            <th>-Y</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                    </tbody>
-                </table>
-            </div>
-            <div class="flex-item table-section">
-                <h2>Octante 7</h2>
-                <table id="tabla-octante-7">
-                    <thead>
-                        <tr>
-                            <th>-X</th>
-                            <th>Y</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                    </tbody>
-                </table>
-            </div>
-            <div class="flex-item table-section">
-                <h2>Octante 8</h2>
-                <table id="tabla-octante-8">
-                    <thead>
-                        <tr>
-                            <th>Y</th>
-                            <th>-X</th>
+                            <th>N</th>
+                            <th>Pk</th>
+                            <th>Xk+1</th>
+                            <th>Yk-1</th>
                         </tr>
                     </thead>
                     <tbody>
